# sql-deta

./: Pipfile  README.md  README.pypi.md  setup.cfg
sql_deta/: __init__.py  peewee.py
