[metadata]
name = sql-deta
version = attr:sql_deta.__version__
description = Detabase <--> SQL proxy
long_description = file:README.pypi.md
long_description_content_type = text/markdown
author = d;)
#author_email = 
license = GLWTPL
license_files = LICENSE
url = https://github.com/ablaternae/sql-deta
keywords = deta, detabase, sql, peewee, mixin,

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    #License :: Freeware
    #License :: OSI Approved :: BSD License
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
    #Topic :: Utilities

#project_urls =
#    Source Code = 
#    Bug Tracker = 

[options]
#packages = sql_deta
python_requires = >=3.7
#install_requires = file:requirements.txt
install_requires = 
    deta
    odetam
    more-itertools
    peewee
setup_requires =
	wheel
#py_modules =
#	autoload

#[options.entry_points]
#console_scripts =
#	cli-script=src.cli:main
    
[options.packages.find]
where = sql_deta
exclude =
    example*
    tool*
    docs*
    test*